--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
   "content_scripts": [
     {
       "matches": ["https://gist.github.com/*"],
-      "js": ["jquery.js", "script.js"]
+      "js": ["jquery.js", "script.js"],
+      "css": ["fontello/css/fontello-embedded.css"]
     }
   ]
 }
